# oiplease

./: Cargo.toml  Dockerfile  README.md  publish.sh
examples/: deployment.yaml  ingress.yaml
src/: auth.rs  config.rs  jwt.rs  jwtc.rs  login.rs  main.rs  oidc.rs  validate.rs
