[package]
name = "oiplease"
version = "1.0.0"
edition = "2021"
authors = ["Protryon <max.bruce12@gmail.com>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Protryon/oiplease"

[dependencies]
tokio = { version = "1.27", features = ["full"] }
env_logger = "0.10.0"
prometheus = "0.13.3"
prometheus_exporter = "0.8"
lazy_static = "1.4"
hyper = { version = "0.14", features = ["http1", "http2", "server", "runtime"] }
http = "0.2"
http-body = "0.4"
chrono = "0.4"
url = { version = "2.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
log = "0.4"
anyhow = "1.0"
openid = "0.11"
cookie = { version = "0.17.0", features = ["percent-encode"] }
always_cell = "0.1"
serde_urlencoded = "0.7.1"
serde_json = "1.0"
base64 = "0.21"
flate2 = "1.0.26"

jwt = { version = "0.16" }
hmac = { version = "0.12" }
sha2 = { version = "0.10" }
