[package]
name = "oiplease"
version = "1.1.0"
edition = "2021"
authors = ["Protryon <max.bruce12@gmail.com>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Protryon/oiplease"
description = "An OIDC Proxy designed to augment NGINX Ingress Controller"
keywords = [ "proxy", "oidc", "oauth", "oauth2" ]

[dependencies]
tokio = { version = "1.27", features = ["full"] }
env_logger = "0.10.0"
prometheus = "0.13.3"
prometheus_exporter = "0.8"
lazy_static = "1.4"
chrono = "0.4"
url = { version = "2.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
anyhow = "1.0"
openid = { version = "0.12", git = "https://github.com/Protryon/openid.git", features = ["middleware"] }
cookie = { version = "0.17.0", features = ["percent-encode"] }
always_cell = "0.1"

axol = { version = "0.1" } # , git = "https://github.com/Protryon/axol.git"
axol-http = { version = "0.1" } # , git = "https://github.com/Protryon/axol.git"
tracing-opentelemetry = "0.19.0"
tracing-subscriber = "0.3.17"
opentelemetry = { version = "0.19.0", features = ["rt-tokio"] }
opentelemetry_api = { version = "0.19.0" }
opentelemetry-otlp = "0.12.0"
tracing = { version = "0.1", features = ["log-always", "release_max_level_debug"]}
reqwest-maybe-middleware = "0.2.1"
reqwest-middleware = "0.2.2"
reqwest-tracing = { version = "0.4.5", features = ["opentelemetry_0_19"] }
reqwest = "0.11"

serde_json = "1.0"
base64 = "0.21"
flate2 = "1.0.26"

jwt = { version = "0.16" }
hmac = { version = "0.12" }
sha2 = { version = "0.10" }
